docs/0.6/_sources/api/gammapy.spectrum.SpectrumObservation.rst.txt


SpectrumObservation
====================================

.. currentmodule:: gammapy.spectrum

.. autoclass:: SpectrumObservation
   :show-inheritance:

   
     
   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~SpectrumObservation.alpha
      ~SpectrumObservation.background_vector
      ~SpectrumObservation.e_reco
      ~SpectrumObservation.e_true
      ~SpectrumObservation.hi_threshold
      ~SpectrumObservation.livetime
      ~SpectrumObservation.lo_threshold
      ~SpectrumObservation.nbins
      ~SpectrumObservation.obs_id
      ~SpectrumObservation.total_stats
      ~SpectrumObservation.total_stats_safe_range

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~SpectrumObservation.copy
      ~SpectrumObservation.peek
      ~SpectrumObservation.predicted_counts
      ~SpectrumObservation.read
      ~SpectrumObservation.stats
      ~SpectrumObservation.stats_in_range
      ~SpectrumObservation.stats_table
      ~SpectrumObservation.to_sherpa
      ~SpectrumObservation.write

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: alpha
   .. autoattribute:: background_vector
   .. autoattribute:: e_reco
   .. autoattribute:: e_true
   .. autoattribute:: hi_threshold
   .. autoattribute:: livetime
   .. autoattribute:: lo_threshold
   .. autoattribute:: nbins
   .. autoattribute:: obs_id
   .. autoattribute:: total_stats
   .. autoattribute:: total_stats_safe_range

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: copy
   .. automethod:: peek
   .. automethod:: predicted_counts
   .. automethod:: read
   .. automethod:: stats
   .. automethod:: stats_in_range
   .. automethod:: stats_table
   .. automethod:: to_sherpa
   .. automethod:: write

   
   